--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-revamp",
   "version": "0.1.0",
-  "proxy": "http://localhost:8000",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -12,7 +12,9 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "@types/express": "^4.17.13",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
@@ -53,7 +55,6 @@
     ]
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.4"
   }
 }
